...
    onClearClicked: () -> Unit,
    modifier: Modifier = Modifier
) {
    TopAppBar(
        title = {
            Text(
                text = "Android Logs",
                fontWeight = FontWeight.Bold,
                style = MaterialTheme.typography.titleLarge
            )
        },
        actions = {
            IconButton(onClick = onExportClicked) {
                Icon(
                    imageVector = Icons.Default.Share,
                    contentDescription = "Export logs"
                )
            }
            IconButton(onClick = onClearClicked) {
                Icon(
                    imageVector = Icons.Default.Delete,
                    contentDescription = "Clear all logs"
                )
            }
        },
        colors = TopAppBarDefaults.topAppBarColors(
            containerColor = MaterialTheme.colorScheme.surface
        ),
...
            Spacer(modifier = Modifier.height(16.dp))

            Text(
                text = if (searchQuery.isNotBlank() || selectedLogType != null) {
                    "No Matching Logs Found"
                } else {
                    "No Logs Recorded Yet"
                },
                style = MaterialTheme.typography.titleMedium,
                fontWeight = FontWeight.Bold,
                color = MaterialTheme.colorScheme.onSurface
            )

...
