package `in`.rahulja.getlogs.model

enum class LogType {
    GENERAL,
    LOCATION,
    WIFI,
    SECURITY,
    SYSTEM
}
